--- a/config/locales/custom/en/general.yml
+++ b/config/locales/custom/en/general.yml
@@ -1,4 +1,13 @@
 en:
+  layouts:
+    footer:
+      consul_url: https://github.com/rockandror/innoviris-consul
+      funding:
+        text: "This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No 872441."
+        logo: "European Union's logo"
+      framework:
+        link: "Visit the Pro-Ethics framework pro-ethics.eu"
+        logo: "Pro-Ethics logo"
   polls:
     answers:
       create:
