Add missing English translation
This translations is called when rendering the error presence
validators error message for single choice questions. We need to
translate to all the enabled languages so error messages are
correctly defined for all the languages we use.

--- a/config/locales/custom/en/activerecord.yml
+++ b/config/locales/custom/en/activerecord.yml
@@ -1,6 +1,8 @@
 en:
   activerecord:
     attributes:
+      poll/answer:
+        answer_id: "Answer"
       poll/question:
         mandatory_answer: "Mandatory answer"
       poll/question/translation:
